force-app/main/default/objects/Int_Exposure__c/Int_Exposure__c.object-meta.xml
<CustomObject>
    <label>Int Exposure</label>
    <nameField>
        <displayFormat>EXP-{00000000}</displayFormat>
        <label>Int Exposure Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Exposure</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>