force-app/main/default/objects/Int_Exposure__c/fields/Estimated_Property_Tax__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Property_Tax__c</fullName>
    <label>Estimated Property Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>