force-app/main/default/objects/Int_Exposure__c/fields/Evergreen_Billed_Not_Paid__c.field-meta.xml
<CustomField>
    <fullName>Evergreen_Billed_Not_Paid__c</fullName>
    <label>Evergreen Billed Not Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>