force-app/main/default/objects/Int_Exposure__c/fields/Extracted__c.field-meta.xml
<CustomField>
    <fullName>Extracted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Extracted?</label>
    <type>Checkbox</type>
</CustomField>