force-app/main/default/objects/Int_Exposure__c/fields/Finance_Fees__c.field-meta.xml
<CustomField>
    <fullName>Finance_Fees__c</fullName>
    <label>Finance Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>