force-app/main/default/objects/Int_Exposure__c/fields/Insurance_Fees__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Fees__c</fullName>
    <label>Insurance Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>