force-app/main/default/objects/Int_Exposure__c/fields/Outstanding_Rent__c.field-meta.xml
<CustomField>
    <fullName>Outstanding_Rent__c</fullName>
    <label>Outstanding Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>