force-app/main/default/objects/Int_Exposure__c/fields/Rent_Accrual__c.field-meta.xml
<CustomField>
    <fullName>Rent_Accrual__c</fullName>
    <label>Rent Accrual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>