force-app/main/default/objects/Int_Exposure__c/fields/Termination_Quote_Fees__c.field-meta.xml
<CustomField>
    <fullName>Termination_Quote_Fees__c</fullName>
    <label>Termination Quote Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>