force-app/main/default/objects/Int_Exposure__c/fields/Total_Other__c.field-meta.xml
<CustomField>
    <fullName>Total_Other__c</fullName>
    <formula>Origination_Fees__c +  Service_Fees__c +  Termination_Quote_Fees__c +  Estimated_Property_Tax__c +  Sales_Tax_On_Property_Tax__c +  Asset_Sale__c +  NSF_Fees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>