force-app/main/default/objects/Int_Exposure__c/fields/Unearned_Residual__c.field-meta.xml
<CustomField>
    <fullName>Unearned_Residual__c</fullName>
    <label>Unearned Residual</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>