force-app/main/default/objects/Int_Exposure__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Lease_Number__c</columns>
    <columns>Exposure__c</columns>
    <columns>Extracted__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>